samples/_failures_safe/1761373610_bd1c78_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d228f1c5.c: In function ‘primMST’:
./samples/SAFE/__tmp_d228f1c5.c:130:21: error: expected ‘)’ at end of input
  130 |         free(minNode
      |             ~       ^
      |                     )
./samples/SAFE/__tmp_d228f1c5.c:130:9: error: expected declaration or statement at end of input
  130 |         free(minNode
      |         ^~~~
./samples/SAFE/__tmp_d228f1c5.c:130:9: error: expected declaration or statement at end of input
